# spin-component-metrics-example

./: Cargo.toml  README.md  spin.toml
src/: lib.rs
