[package]
name = "component-metrics-example"
authors = ["Andrew Steurer <94206073+asteurer@users.noreply.github.com>"]
description = "An application that generates CPU usage and allocates some memory"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "5.1.1"

[workspace]
